tests/Checker/everything/errors/24a.vc
int main() {
    continue;
    while (false) {}
    return 1;
}
